<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>verification_node_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="long.lhoang.1809@gmail.com">lhlong</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>verification_inf_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>